--- a/templates/login.html
+++ b/templates/login.html
@@ -96,7 +96,7 @@
     
         <div class="login-link">
             <a href="/" style="color: grey;">
-                Didn't registered yet? 
+                Didn't Registered yet? 
                 <span style="color: #2196F3; cursor: pointer;">Signup here</span>
             </a>
         </div>
